--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@clerk/nextjs": "^4.23.3",
     "@hookform/resolvers": "^3.3.1",
+    "@pinecone-database/pinecone": "^0.1.6",
     "@prisma/client": "^5.1.1",
     "@radix-ui/react-avatar": "^1.0.3",
     "@radix-ui/react-dialog": "^1.0.4",
@@ -23,6 +24,8 @@
     "@types/node": "20.5.0",
     "@types/react": "18.2.20",
     "@types/react-dom": "18.2.7",
+    "@upstash/ratelimit": "^0.4.4",
+    "@upstash/redis": "^1.22.0",
     "ai": "^2.2.11",
     "autoprefixer": "10.4.15",
     "axios": "^1.5.0",
@@ -30,6 +33,7 @@
     "clsx": "^2.0.0",
     "eslint": "8.47.0",
     "eslint-config-next": "13.4.16",
+    "langchain": "^0.0.145",
     "lucide-react": "^0.268.0",
     "next": "13.4.16",
     "next-cloudinary": "^4.20.0",
@@ -39,6 +43,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.46.0",
+    "react-spinners": "^0.13.8",
     "tailwind-merge": "^1.14.0",
     "tailwindcss": "3.3.3",
     "tailwindcss-animate": "^1.0.6",
